--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,18 @@
 server:
-  port: 9999
+  port: 9090
   context-path: /services
+  
 security:
   oauth2:
     resource:
       user-info-uri: http://localhost:8888/services/user
 
 spring:
+  application:
+    name: account-service
+  jpa:
+    hibernate:
+      ddl-auto: update
   zipkin:
     base-url: http://localhost:8080
   sleuth:
@@ -15,4 +21,6 @@ spring:
     
 logging:
   level:
+    org.springframework.web: DEBUG
     org.springframework.cloud.sleuth: DEBUG
+    org.springframework.security: DEBUG
