--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,6 @@ spring:
       
 logging:
   level:
-    org.springframework.web: DEBUG
-    org.springframework.cloud.sleuth: DEBUG
-    org.springframework.security: DEBUG
+    org.springframework.web: ERROR
+    org.springframework.cloud.sleuth: ERROR
+    org.springframework.security: ERROR
