updated logger configuration and discovery server config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,15 @@
 server:
   port: 9090
-  context-path: /services
   
 security:
   oauth2:
     client:
-      access-token-uri: http://localhost:9999/spring-security-oauth-server/oauth/token
-      user-authorization-uri: http://localhost:9999/spring-security-oauth-server/oauth/authorize
+      access-token-uri: http://localhost:9999/oauth/token
+      user-authorization-uri: http://localhost:9999/oauth/authorize
       client-id: commandlineinterface
       client-secret: commandlineinterface
     resource:
-      user-info-uri: http://localhost:9999/spring-security-oauth-server/user
+      user-info-uri: http://localhost:9999/user
       
 spring:
   application:
