--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,12 +1,13 @@
 spring:
   profiles:
     active:
-    - dev
+    - prod
   cloud:
     config:
       uri: http://localhost:8888
       username: config-server
       password: config-server
       fail-fast: false
+      
 encrypt:
   key: ABCDEFGHIJKLMNOPQRSTUVWXYZ
