--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
       
 logging:
   level:
-    root: INFO 
+    #root: INFO 
     org.springframework.web: INFO
     org.springframework.cloud.sleuth: INFO
     org.springframework.security: INFO
